# agentic-code-reviewer

./: .env.example  .gitignore  GETTING_STARTED.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  telemetry-id
config/scoring/: rubric.yaml
config/semgrep_rules/: custom.yaml
docker/: Dockerfile.app
docker/sandbox/: Dockerfile.sandbox
prompts/: dummy-repo-prompt.txt
scripts/: run_local.sh  setup_db.sh
src/: config.py  main.py
src/agent/: __init__.py  graph.py  state.py
src/agent/nodes/: __init__.py  apply_patch.py  escalate_finalize.py  explain_diff.py  generate_patch.py  ingest_repo.py  plan_change.py  retrieve_context.py  run_checks.py  score_change.py
src/agent/tools/: __init__.py  diff_generator.py  llm.py  vector_search.py
src/api/: __init__.py
src/api/routes/: __init__.py  health.py  runs.py
src/cli/: main.py
src/db/: audit.py  models.py
src/db/migrations/: env.py  script.py.mako
src/db/migrations/versions/: 001_initial.py
src/indexing/: __init__.py  chunker.py  embedder.py  filters.py
src/sandbox/: __init__.py  docker_manager.py  executor.py
src/scoring/: __init__.py  engine.py  llm_judge.py  risk_analyzer.py
src/validation/: __init__.py  pipeline.py
src/validation/checks/: __init__.py  base.py
tests/: conftest.py
tests/unit/: test_chunker.py  test_scoring.py  test_validation.py
