[project]
name = "agentic-ai-code-reviewer"
version = "0.1.0"
description = "AI-powered code review and auto-refactor system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Engineering Team" }
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "langgraph>=0.0.40",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.5",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "pgvector>=0.2.0",
    "openai>=1.10.0",
    "tiktoken>=0.5.0",
    "docker>=7.0.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "unidiff>=0.7.0",
    "whatthepatch>=1.0.0",
    "tree-sitter>=0.20.0",
    "pygments>=2.17.0",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-docker>=2.0.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-redis>=4.6.0",
    "httpx>=0.26.0",
]

[project.scripts]
kilo = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
    "TCH",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
